--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="index5.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="text">
@@ -39,7 +39,7 @@
             <div class="fourth3"></div>
         </li>
     </ol>
-    <a href="index6.html">
+    <a href="index2.html">
         <p>Lets go and try other things</p>
     </a>
 </body>
