--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="index6.css">
+    <link rel="stylesheet" href="index2.css">
 </head>
 <body>
     <div class="text">
@@ -24,10 +24,10 @@
         <li class="trans5">
         </li>
     </ol><br>
-    <a href="index5.html">
+    <a href="index.html">
         <p class="text2">Back</p>
     </a>
-    <a href="index7.html">
+    <a href="index3.html">
         <p class="text3">Next</p>
     </a>
 </body>
