Update and rename index7.html to index3.html

--- a/index3.html
+++ b/index3.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>car_animation</title>
-    <link rel="stylesheet" href="index7.css">
+    <link rel="stylesheet" href="index3.css">
 </head>
 <body>
     <div class="container">
@@ -15,15 +15,15 @@
         <span style="background-color:green;">DAY</span>
        </h1>
      <div class="car-container">
-         <img src="./images/car.png" alt="" class="car"/>
-         <img src="./images/wheel.png" alt="" class="wheel wheel1"/>
-         <img src="./images/wheel (1).png" alt="" class="wheel wheel2"/>
-         <img src="./images/Flag.png" alt="" class="flag"/>
+         <img src="./car.png" alt="" class="car"/>
+         <img src="./wheel.png" alt="" class="wheel wheel1"/>
+         <img src="./wheel (1).png" alt="" class="wheel wheel2"/>
+         <img src="./Flag.png" alt="" class="flag"/>
      </div>
-     <img src="./images/sun.png" alt="" class="sun"/>
+     <img src="./sun.png" alt="" class="sun"/>
      <div class="background">
-         <img src="./images/road.jpg" alt=""class="road"/>
-         <img src="./images/city.png" alt="" class="buildings">
+         <img src="./road.jpg" alt=""class="road"/>
+         <img src="./city.png" alt="" class="buildings">
      </div>
     </div>
 </body>
